--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -43,6 +43,7 @@
 }
 
 .detail{
+    font-size: 1.4rem;
     display: flex;
     padding: 4.5rem;
     background-color: var(--color-grey-light-1);
@@ -51,7 +52,6 @@
 }
 
 .description{
-    font-size: 1.4rem;
     background-color: #fff;
     box-shadow: var(--shadow-light);
     padding: 3rem;
@@ -61,6 +61,9 @@
 }
 
 .user-reviews{
-    background-color: greenyellow;
     flex: 1;
+
+    display:flex;
+    flex-direction: column;
+    align-items: center;
 }
